fix: change unmodified list to modifiable list for key skills